@@ -21,12 +21,12 @@
         <aimin.version>0.0.1-SNAPSHOT</aimin.version>
         <java.version>21</java.version>
         <spring-cloud.version>2024.0.0</spring-cloud.version>
-        <spring-cloud-alibaba.version>2023.0.3.2</spring-cloud-alibaba.version>
+        <spring-cloud-alibaba.version>2023.0.1.0</spring-cloud-alibaba.version>
         <spring-boot.version>3.4.0</spring-boot.version>
         <lombok.version>1.18.36</lombok.version>
         <fastjson2.version>2.0.53</fastjson2.version>
         <weixin-java-miniapp.version>4.6.0</weixin-java-miniapp.version>
-        <guava.version>33.4.0-jre</guava.version>
+        <guava.version>32.1.3-jre</guava.version>
         <sa-token.version>1.39.0</sa-token.version>
         <commons-pool2.version>2.12.0</commons-pool2.version>
         <mybatis-plus.version>3.5.9</mybatis-plus.version>
@@ -40,6 +40,9 @@
         <hutool.version>5.8.35</hutool.version>
         <tomcat-embed-core.version>11.0.2</tomcat-embed-core.version>
         <protobuf-java.version>4.28.2</protobuf-java.version>
+        <aliyun-captcha.version>1.1.2</aliyun-captcha.version>
+        <crane4j.version>2.9.0</crane4j.version>
+        <jackson.version>2.17.3</jackson.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -47,34 +50,12 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
                 <version>${spring-boot.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-starter-logging</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-log4j2</artifactId>
-                <version>${spring-boot.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.apache.tomcat.embed</groupId>
-                        <artifactId>tomcat-embed-core</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>com.google.protobuf</groupId>
-                        <artifactId>protobuf-java</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
 
             <dependency>
@@ -114,7 +95,7 @@
 
             <dependency>
                 <groupId>com.oimc</groupId>
-                <artifactId>aimin-common-core</artifactId>
+                <artifactId>aimin-base</artifactId>
                 <version>${aimin.version}</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2 -->
@@ -146,6 +127,12 @@
             <dependency>
                 <groupId>cn.dev33</groupId>
                 <artifactId>sa-token-redis-jackson</artifactId>
+                <version>${sa-token.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-core</artifactId>
                 <version>${sa-token.version}</version>
             </dependency>
 
@@ -204,12 +191,6 @@
             </dependency>
 
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-freemarker</artifactId>
-                <version>${spring-boot.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>com.ibeetl</groupId>
                 <artifactId>beetl-springboot-starter-jdk17</artifactId>
                 <version>${beetl.version}</version>
@@ -219,12 +200,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-redis</artifactId>
                 <version>${spring-boot.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
             </dependency>
 
             <dependency>
@@ -245,6 +220,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.oimc</groupId>
+                <artifactId>aimin-satoken</artifactId>
+                <version>${aimin.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-aop</artifactId>
                 <version>${spring-boot.version}</version>
@@ -258,7 +239,7 @@
 
             <dependency>
                 <groupId>com.oimc</groupId>
-                <artifactId>aimin-mp</artifactId>
+                <artifactId>aimin-ds</artifactId>
                 <version>${aimin.version}</version>
             </dependency>
 
@@ -304,35 +285,44 @@
                 <artifactId>spring-boot-starter-amqp</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-bom</artifactId>
+                <version>${hutool.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-core -->
         <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-core</artifactId>
-            <version>${hutool.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>${spring-boot.version}</version>
+            <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-core</artifactId>
-            <version>${tomcat-embed-core.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.protobuf</groupId>
-            <artifactId>protobuf-java</artifactId>
-            <version>${protobuf-java.version}</version>
-        </dependency>
-
 
     </dependencies>
 
@@ -341,6 +331,9 @@
         <module>aimin-auth</module>
         <module>aimin-common</module>
         <module>aimin-drug</module>
+        <module>aimin-admin</module>
+        <module>aimin-search</module>
+        <module>aimin-ai</module>
     </modules>
 
     <build>
@@ -363,6 +356,11 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.13.0</version>
                     <configuration>
+                        <release>21</release>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
+
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.projectlombok</groupId>
@@ -380,5 +378,4 @@
             </plugins>
         </pluginManagement>
     </build>
-
 </project>
